<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spaceship_controller</name>
  <version>0.1.0</version>
  <description>
    Controlador autónomo de la nave espacial 2D.
    Práctica ROS2 — Grado en Ciencia de Datos — Robótica.
    El nodo lee el estado de la nave y publica comandos de motor
    para llevarla al target lo más rápido posible.
  </description>
  <maintainer email="alumno@universidad.es">Alumno</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>spaceship_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
